--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.635 2023/09/27 08:20:50 semarie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.636 2023/09/27 12:24:22 espie Exp $
 .\"
 .\" Copyright (c) 2000-2008 Marc Espie
 .\"
@@ -1628,6 +1628,12 @@ below for details.
 .It Ev DEBUGINFO_ARCHS
 List of archs for which debug information may be provided as extra packages.
 Normally only amd64 for performance reasons.
+.It Ev DESCR
+Location of description file for the package, defaults to
+.Pa ${PKGDIR}/DESCR
+(or
+.Pa ${PKGDIR}/DESCR${SUBPACKAGE}
+for multi-packages).
 .It Ev DESTDIR
 See
 .Ev DESTDIRNAME .
@@ -2927,6 +2933,13 @@ Used in
 file names and actual contents, can be overridden for ports
 with branches, like php, e.g.,
 .Li PKGSTEM-main = php-5.6
+.It Ev PLIST
+Location of package packing-list.
+Defaults to
+.Pa ${PKGDIR}/PLIST ,
+or to
+.Pa ${PKGDIR}/PLIST${SUBPACKAGE}
+for multi-packages.
 .It Ev PLIST_DB
 Deprecated, see
 .Ev PLIST_REPOSITORY .
