fix punctuation and formatting in AUTHORS;

--- a/share/man/man4/qcrng.4
+++ b/share/man/man4/qcrng.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: qcrng.4,v 1.1 2023/09/27 07:50:46 phessler Exp $
+.\"	$OpenBSD: qcrng.4,v 1.2 2023/09/27 20:30:19 jmc Exp $
 .\"
 .\" Copyright (c) 2020 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -44,9 +44,8 @@ driver first appeared in
 The
 .Nm
 driver was written by
-.An Peter Hessler Aq Mt phessler@openbsd.org
+.An Peter Hessler Aq Mt phessler@openbsd.org ,
 based on the
 .Xr amlrng 4
 driver by
-.An -nosplit
-.An Mark Kettenis Aq Mt kettenis@openbsd.org ,
+.An Mark Kettenis Aq Mt kettenis@openbsd.org .
