--- a/share/man/man5/ruby-module.5
+++ b/share/man/man5/ruby-module.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ruby-module.5,v 1.43 2023/09/27 21:46:17 jeremy Exp $
+.\"	$OpenBSD: ruby-module.5,v 1.44 2023/09/28 03:34:32 jsg Exp $
 .\"
 .\" Copyright (c) 2011-2015, 2023 Jeremy Evans <jeremy@openbsd.org>
 .\" Copyright (c) 2008, 2011 Marc Espie <espie@openbsd.org>
@@ -25,7 +25,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: September 27 2023 $
+.Dd $Mdocdate: September 28 2023 $
 .Dt RUBY-MODULE 5
 .Os
 .Sh NAME
@@ -283,7 +283,7 @@ A list of filename patterns that will automatically have
 .Ev MODRUBY_RUBY_ADJ
 called on them during pre\-configure.
 .It Ev MODRUBY_ARCH
-The plaform-specific string used by Ruby for files installed
+The platform-specific string used by Ruby for files installed
 into platform-specific directories.
 .It Ev MODRUBY_BINREV
 The same as
