--- a/lib/libcrypto/man/ASIdentifiers_new.3
+++ b/lib/libcrypto/man/ASIdentifiers_new.3
@@ -1,4 +1,4 @@
-.\" $OpenBSD: ASIdentifiers_new.3,v 1.9 2023/09/29 08:57:49 tb Exp $
+.\" $OpenBSD: ASIdentifiers_new.3,v 1.10 2023/09/30 13:51:00 schwarze Exp $
 .\"
 .\" Copyright (c) 2021 Theo Buehler <tb@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 29 2023 $
+.Dd $Mdocdate: September 30 2023 $
 .Dt ASIDENTIFIERS_NEW 3
 .Os
 .Sh NAME
@@ -95,14 +95,14 @@ returns a new
 .Vt ASIdentifiers
 object or
 .Dv NULL
-on if an error occurs.
+if an error occurs.
 .Pp
 .Fn d2i_ASIdentifiers
 returns an
 .Vt ASIdentifiers
 object or
 .Dv NULL
-on if a decoding or memory allocation error occurs.
+if a decoding or memory allocation error occurs.
 .Pp
 .Fn i2d_ASIdentifiers
 returns the number of bytes successfully encoded
