Switch copyright year to 2023.
Apparently I should have used 2023 despite sharing versions of these
files with several people under this license (and thus permitting them
to redistribute and share with the public). It makes no sense to me,
but shrug.

--- a/lib/libcrypto/man/ASIdentifiers_new.3
+++ b/lib/libcrypto/man/ASIdentifiers_new.3
@@ -1,6 +1,6 @@
-.\" $OpenBSD: ASIdentifiers_new.3,v 1.10 2023/09/30 13:51:00 schwarze Exp $
+.\" $OpenBSD: ASIdentifiers_new.3,v 1.11 2023/09/30 18:16:44 tb Exp $
 .\"
-.\" Copyright (c) 2021 Theo Buehler <tb@openbsd.org>
+.\" Copyright (c) 2023 Theo Buehler <tb@openbsd.org>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
