--- a/lib/libcrypto/man/X509v3_asid_add_id_or_range.3
+++ b/lib/libcrypto/man/X509v3_asid_add_id_or_range.3
@@ -1,6 +1,6 @@
-.\" $OpenBSD: X509v3_asid_add_id_or_range.3,v 1.8 2023/09/30 14:29:41 schwarze Exp $
+.\" $OpenBSD: X509v3_asid_add_id_or_range.3,v 1.9 2023/09/30 18:16:44 tb Exp $
 .\"
-.\" Copyright (c) 2021-2023 Theo Buehler <tb@openbsd.org>
+.\" Copyright (c) 2023 Theo Buehler <tb@openbsd.org>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
