--- a/lib/libc/sys/sysctl.2
+++ b/lib/libc/sys/sysctl.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sysctl.2,v 1.52 2023/05/16 21:13:19 jmc Exp $
+.\"	$OpenBSD: sysctl.2,v 1.53 2023/10/01 15:58:11 krw Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -27,7 +27,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 16 2023 $
+.Dd $Mdocdate: October 1 2023 $
 .Dt SYSCTL 2
 .Os
 .Sh NAME
@@ -296,6 +296,7 @@ privileges may change the value.
 .It Dv HW_SENSORS Ta "node" Ta "not applicable"
 .It Dv HW_SETPERF Ta "integer" Ta "yes"
 .It Dv HW_SMT Ta "integer" Ta "yes"
+.It DV HW_UCOMNAMES Ta "string" Ta "no"
 .It Dv HW_USERMEM Ta "integer" Ta "no"
 .It Dv HW_USERMEM64 Ta "int64_t" Ta "no"
 .It Dv HW_UUID Ta "string" Ta "no"
@@ -396,6 +397,20 @@ is set to
 If set to 1, enable simultaneous multithreading (SMT) on CPUs that
 support it.
 Disabled by default.
+.It Dv HW_UCOMNAMES Pq Va hw.ucomnames
+A comma-separated list of currently attached
+.Xr ucom 4
+devices in the following format:
+.Pp
+.Sm off
+.D1 Sy ucom Ar N : Sy usb Ar bus.route.interface
+.Sm on
+.Pp
+The
+.Ar route
+consists of five hexadecimal digits and identifies the port
+containing the
+.Ar interface .
 .It Dv HW_USERMEM
 The amount of available non-kernel memory in bytes.
 This variable is deprecated; use
