--- a/lib/libc/sys/sysctl.2
+++ b/lib/libc/sys/sysctl.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sysctl.2,v 1.53 2023/10/01 15:58:11 krw Exp $
+.\"	$OpenBSD: sysctl.2,v 1.54 2023/10/02 05:29:59 jmc Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -27,7 +27,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: October 1 2023 $
+.Dd $Mdocdate: October 2 2023 $
 .Dt SYSCTL 2
 .Os
 .Sh NAME
@@ -296,7 +296,7 @@ privileges may change the value.
 .It Dv HW_SENSORS Ta "node" Ta "not applicable"
 .It Dv HW_SETPERF Ta "integer" Ta "yes"
 .It Dv HW_SMT Ta "integer" Ta "yes"
-.It DV HW_UCOMNAMES Ta "string" Ta "no"
+.It Dv HW_UCOMNAMES Ta "string" Ta "no"
 .It Dv HW_USERMEM Ta "integer" Ta "no"
 .It Dv HW_USERMEM64 Ta "int64_t" Ta "no"
 .It Dv HW_UUID Ta "string" Ta "no"
