--- a/usr.bin/cu/cu.1
+++ b/usr.bin/cu/cu.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cu.1,v 1.22 2022/08/04 04:01:48 jsg Exp $
+.\"	$OpenBSD: cu.1,v 1.23 2023/10/02 14:48:10 krw Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -27,7 +27,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: August 4 2022 $
+.Dd $Mdocdate: October 2 2023 $
 .Dt CU 1
 .Os
 .Sh NAME
@@ -60,11 +60,13 @@ should not allow the driver to block waiting for a carrier to be detected.
 Specify an escape character to use instead of the default tilde.
 .It Fl l Ar line
 Specify the line to use.
-Either of the forms like
-.Pa cua00
+Any of the forms
+.Pa cua00 ,
+.Pa /dev/cua00 ,
 or
-.Pa /dev/cua00
+.Pa usb0.1.2
 are permitted.
+.Pp
 The default is
 .Pa /dev/cua00 .
 See
@@ -75,6 +77,12 @@ Users in group
 are permitted to use
 .Xr cua 4
 devices by default.
+.Pp
+See
+.Xr sysctl 2
+.Va hw.ucomnames
+for available USB serial lines.
+.Pp
 .It Fl r
 Start
 .Nm
@@ -199,6 +207,8 @@ host description file
 .Sh EXIT STATUS
 .Ex -std cu
 .Sh SEE ALSO
+.Xr sysctl 2 ,
+.Xr cua 4 ,
 .Xr remote 5
 .Sh HISTORY
 The
