--- a/usr.bin/ssh/ssh_config.5
+++ b/usr.bin/ssh/ssh_config.5
@@ -33,7 +33,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: ssh_config.5,v 1.387 2023/10/04 04:03:50 djm Exp $
+.\" $OpenBSD: ssh_config.5,v 1.388 2023/10/04 05:42:10 jmc Exp $
 .Dd $Mdocdate: October 4 2023 $
 .Dt SSH_CONFIG 5
 .Os
@@ -2212,7 +2212,7 @@ Note that some of these directives build commands for execution via the shell.
 Because
 .Xr ssh 1
 performs no filtering or escaping of characters that have special meaning in
-shell commands (e.g. quotes), it is the user's reposibility to ensure that
+shell commands (e.g. quotes), it is the user's responsibility to ensure that
 the arguments passed to
 .Xr ssh 1
 do not contain such characters and that tokens are appropriately quoted
